# scrilla

./: .buildinfo  .coverage  .coveragerc  .deepsource.toml  .dockerignore  .gitignore  .sample.env  APPENDIX.html  ARCHITECTURE.html  CONFIGURATION.html  DEPLOYMENT.html  DEVELOPMENT.html  Dockerfile  INTRO.html  MANIFEST.in  Manifest.in  OVERVIEW.html  README.md  README.txt  SETUP.html  TODOS.md  TODOS.txt  USAGE.html  coverage.xml  crypto.json  docker-compose.yml  eth_last.txt  eth_middle.txt  genindex.html  index.html  log.txt  main.py  objects.inv  pyproject.toml  requirements-docker.txt  requirements.txt  requirements_docker.txt  sample.env  scrilla.db  search.html  (+5 more)
.circleci/: Dockerfile  config.yml  requirements.txt
_sources/: APPENDIX.md.txt  CONFIGURATION.md.txt  DEPLOYMENT.md.txt  INTRO.md.txt  OVERVIEW.md.txt  SETUP.md.txt  USAGE.md.txt  index.rst.txt
app/: calculator.py  files.py  markets.py  optimizer.py  portfolio.py  pyfin.py  services.py  settings.py  statistics.py  utilities.py
assets/: index.html
cache/: 152021_ALLY.json  152021_BX.json
coverage/: d_02c299ab21d894bf_aws_py.html  d_0e8a820c969f5307_config_py.html  d_0e8a820c969f5307_formats_py.html  d_0e8a820c969f5307_functions_py.html  d_1f1ebf8b92dc8d59_components_py.html  d_1f1ebf8b92dc8d59_factories_py.html  d_1f1ebf8b92dc8d59_functions_py.html  d_1f1ebf8b92dc8d59_menu_py.html  d_2c738692b09b45c8_components_py.html  d_2c738692b09b45c8_factories_py.html  d_2c738692b09b45c8_functions_py.html  d_2c738692b09b45c8_menu_py.html  d_328c79b774623d22_constants_py.html  d_328c79b774623d22_definitions_py.html  d_328c79b774623d22_formats_py.html  d_328c79b774623d22_functions_py.html  d_328c79b774623d22_keys_py.html  d_3d32805fa4f85d85_cache_py.html  d_3d32805fa4f85d85_errors_py.html  d_3d32805fa4f85d85_files_py.html  d_3d32805fa4f85d85_main_py.html  d_3d32805fa4f85d85_services_py.html  d_3d32805fa4f85d85_settings_py.html  d_4a25ed309e7bc612_dater_py.html  d_4a25ed309e7bc612_errors_py.html  d_4a25ed309e7bc612_helper_py.html  d_4a25ed309e7bc612_outputter_py.html  d_5485127f26531aab_estimators_py.html  d_5485127f26531aab_integration_py.html  d_5485127f26531aab_markets_py.html  d_5485127f26531aab_optimizer_py.html  d_5485127f26531aab_plotter_py.html  d_583f56727e059443_dater_py.html  d_583f56727e059443_helper_py.html  d_583f56727e059443_plotter_py.html  d_70c7bfae6b159872_dater_py.html  d_70c7bfae6b159872_helper_py.html  d_70c7bfae6b159872_outputter_py.html  d_70c7bfae6b159872_plotter_py.html  d_75555467aa0428fd_optimizer_py.html  (+41 more)
data/: scrapper.py
docs/: APPENDIX.md  EXAMPLES.md  cache.html  errors.html  files.html  index.html  main.html  services.html  settings.html  static.html
env/: .env  .sample.env
frontend/: .dockerignore  Dockerfile
gui/: functions.py  menu.py  widgets.py
package/: cache.html  errors.html  files.html  index.html  main.html  services.html  settings.html
pynance/: main.py
(+650 files in other folders)
