[metadata]
name = pynance
version = 1.0.0
description = a financial optimization program
long_description = README.md
keywords = finance, statistics, stock market, cryptocurrency
classifers=
    Programming Language :: Python :: 3
    License:: GNU GPL v3
    Operating System :: OS Independent

[options]
packages = 
    pynance.app
install_requires =
    numpy ==1.19.3
    scipy ==1.5.4
    matplotlib ==3.3.3
    holidays ==0.10.4    
    PyQt5 ==5.15.2
    python-dotenv ==0.15.0
include_package_data = True

[options.entry_points]
console_scripts =
    pynance = pynance.main:do_program

[options.package_data]
pynance= data/cache/.gitkeep, data/static/.gitkeep, data/common/.gitkeep
