[metadata]
name = scrilla
version = file: src/version.txt
author = Grant Moore
author_email = chinchalinchin@gmail.com
url = https://github.com/chinchalinchin
description = a financial optimization program
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU GPL v3
license_file = LICENSE
platform = any
keywords = finance, statistics, stock market, equitie, cryptocurrency, optimization 
classifers=
    Programming Language :: Python :: 3
    License:: GNU GPL v3
    Operating System :: OS Independent

[options]
python_requires = >= 3.8
package_dir=
    =src
packages=find:
install_requires =
    numpy ==1.19.3
    scipy ==1.5.4
    matplotlib ==3.3.3
    holidays ==0.10.4    
    PyQt5 ==5.15.2
    python-dotenv ==0.15.0
    requests==2.25.0
include_package_data = True

[options.entry_points]
console_scripts =
    scrilla = scrilla.main:do_program

[options.packages.find]
where=src
