[metadata]
name = scrilla
version = file: src/scrilla/version.txt
author = Grant Moore
author_email = chinchalinchin@gmail.com
description = a financial optimization program
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU GPL v3
license_file = LICENSE
platform = any
keywords = finance, statistics, stock market, equities, cryptocurrencies, optimization 
classifers=
    Programming Language :: Python :: 3
    License:: GNU GPL v3
    Operating System :: OS Independent
project_urls =
    Documentation = https://chinchalinchin.github.io/scrilla/
    Source = https://github.com/chinchalinchin/scrilla
    
[options]
python_requires = >= 3.8
package_dir=
    =src
packages=find:
install_requires =
    numpy >=1.19.3
    scipy >=1.5.4
    matplotlib >=3.3.3
    holidays >=0.10.4
    python-dateutil >=2.8.2    
    python-dotenv >=0.15.0
    requests >=2.25.0
include_package_data = True

[options.extras_require]
    gui = PyQt5 >= 5.15.2

[options.entry_points]
console_scripts =
    scrilla = scrilla.main:do_program
    scrilla-gui = scrilla.graphics:do_gui [gui]

[options.packages.find]
where=src
